
- Fixed potential bug and memory leaks in the AMS and ADS solvers.
- Added new interpolation which allows to incorporate near null-space vector
  for systems problems
- Added additive V-cycle and new mult-additive and simplified mult-additive 
  V-cycle
- fixed several bugs in BoomerAMG and removed some inefficiencies
- Added threading to the IJ interface and some AMG setup routines.
#====================================

Version 2.9.4a released 2013/11/21

- Minor bug fix in AMS and other minor changes.

#====================================

Version 2.9.3a released 2013/10/15

- Extended AMS to work for AMR problems on quad/hex meshes by removing an
  assumption that the discrete gradient G only has +-1 entries.  Also changed
  default smoother in AMS to l1-GS.

- Added a hi-D capability to Struct and SStruct.  Use the --enable-maxdim option
  to configure the library for higher-than-3D usage.

- Added complex system support to a subset of the library, including most of the
  matrix-vector class functions and the Krylov solvers.  Currently does not
  support the FEI or babel components.  Use the --enable-complex option to set.

#====================================

Version 2.9.2a released 2013/02/15

- Added HYPRE_AMSSet*AMGCoarseRelaxType for specifying the coarsest level
  relaxation for the AMG subspace solvers in AMS.  Since the subspace matrices
  are often singular, the default value uses l1-GS on the coarsest level, which
  is different from BoomerAMG's default (exact solve).

- Fixed a bug in the IJ interface related to setting off-processor values when
  hypre is configured to use the assumed partition.

- Fixed a bug in BoomerAMG when using C-F L1-Jacobi on coarsest grid, and fixed
  a memory bug related to interpolation.

#====================================

Version 2.9.1a released 2013/01/16

- Added a HYPRE_BoomerAMGSetRedundant() switch to allow for an agglomeration
  approach for solving the coarsest grid system.
